using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constant
{
    // Character animation
    public const string ANIM_IDLE = "idle";
    public const string ANIM_RUN = "run";
    public const string ANIM_FALL = "fall";
    public const string ANIM_WIN = "win";
    public const string ANIM_LOSE = "lose";
}
